# piphi-rtl433-bridge

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release-dockerhub.yml
scripts/: create_github_release.py  release.py
src/: manifest.json
src/piphi_rtl433_bridge/: __init__.py  bridge.py  cli.py  config.py
tests/: test_bridge.py  test_cli.py  test_config.py
